fix: adjust position of file indicator badge for better visibility

--- a/usados_seguimientos/css/usados_seguimientos.css
+++ b/usados_seguimientos/css/usados_seguimientos.css
@@ -95,8 +95,8 @@
 /* Indicador "tiene archivos": badge circular en la esquina */
 .us-celda-clip {
   position: absolute;
-  top: 3px;
-  right: 3px;
+  top: 5px;
+  right: 7px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
